edits and responsive

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <section id="main">
        <div class="main-content">
             <div class="main-content-summary">
-                <h1>HOW MUCH DO YOU KNOW ABOUT Banans?</h1>
+                <h1>HOW MUCH DO YOU KNOW ABOUT Bananas?</h1>
                 <p>The banana is an edible fruit – botanically a berry – produced by several kinds of large herbaceous flowering plants in the genus Musa.<br> In some countries, bananas used for cooking may be called plantains, in contrast to dessert bananas.</p>
                 <button>Learn more</button>
             </div>
